# TekPhysics

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  main.c  nea_checklist.txt  tekgl.h  vcpkg.json
core/: bitset.c  bitset.h  exception.c  exception.h  file.c  file.h  hashtable.c  hashtable.h  list.c  list.h  priorityqueue.c  priorityqueue.h  queue.c  queue.h  stack.c  stack.h  testsuite.c  testsuite.h  threadqueue.c  threadqueue.h  vector.c  vector.h  yml.c  yml.h
glad/include/glad/: glad.h
glad/src/: glad.c
res/: black_ball.tmat  cube.tglo  cube.tmsh  floor.tmsh  grass.tmat  material.tmat  material.yml  mesh.tglo  neon_orange.tmat  pool_ball.tmsh  pool_base.tmsh  pool_fabric.tmat  pool_wall.tmsh  pyramid.tmsh  rad1.tmsh  scenario.tscn  splash.txt  test.yml  translucent.tmat  wall.tglo
res/windows/: editor.yml  load.yml  runner.yml  save.yml  scenario.yml  test_window.yml
scripts/: blacklist.txt  collision_log.txt  collision_test.py  comment_buggerer.py  create_sphere.py  project_crawler.py  test.tmsh
shader/: button.glvs  fragment.glfs  image_fragment.glfs  image_vertex.glvs  line_fragment.glfs  line_vertex.glvs  oval_fragment.glfs  oval_vertex.glvs  text_fragment.glfs  text_vertex.glvs  texture.glfs  texture.glvs  translucent.glfs  translucent.glgs  translucent.glvs  vertex.glvs  window.glfs  window.glgs  window.glvs
tekgl/: camera.c  camera.h  entity.c  entity.h  font.c  font.h  manager.c  manager.h  material.c  material.h  mesh.c  mesh.h  shader.c  shader.h  text.c  text.h  texture.c  texture.h
tekgui/: box_manager.c  box_manager.h  button.c  button.h  container.c  container.h  list_window.c  list_window.h  option_window.c  option_window.h  options.yml  primitives.c  primitives.h  size.c  size.h  tekgui.c  tekgui.h  text_button.c  text_button.h  text_input.c  text_input.h  window.c  window.h
tekphys/: body.c  body.h  collider.c  collider.h  collisions.c  collisions.h  engine.c  engine.h  geometry.c  geometry.h  object.c  plan.txt  scenario.c  scenario.h
tests/: all_datatypes.yml  bad_indent.yml  duplicate_key.yml  exception_test.c  exception_test.h  key_space.yml  take_me_away.txt  triangle_collision_tests.txt  typical.yml  unit_test.c  unit_test.h
